--- a/app/views/employee/edit_personal.erb
+++ b/app/views/employee/edit_personal.erb
@@ -21,7 +21,7 @@
 <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
 
 <div id="content-header">
-   <img src="/images/HR/show_hr.png" alt="" />
+    <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('edit_employee_information') %></h1>
   <h3><%= t('personal') %></h3>
   <div id="app-back-button">
