--- a/app/views/employee/leave_management.erb
+++ b/app/views/employee/leave_management.erb
@@ -21,7 +21,7 @@
 
 
 <div id="content-header">
-  <img src="/images/HR/leave-new.png" alt="" />
+  <%= image_tag("/images/HR/leave-new.png") %>
   <h1><%= t('leave_management') %></h1>
   <h3></h3>
   <div id="app-back-button">
