--- a/app/views/additional_exam/create_additional_exam.erb
+++ b/app/views/additional_exam/create_additional_exam.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('additional_exams_text') %></h1>
   <h3><%= t('create_additional_exams') %></h3>
   <div id="app-back-button">
@@ -26,25 +26,25 @@
   </div>
 </div>
 <div id="page-yield">
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-<div class="box">
-     <div class="label-field-pair">
-   <label for="student_course"><%= t('select_a_course') %>:
-<%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-  <%= select :courses, :name,
-        Course.active.map {|b| [b.course_name, b.id]},
-        {:prompt => "#{t('select_a_course')}"},
-        {:onChange => "#{remote_function(:url => {:action => "update_batch"},
-        :with => "'course_name='+ value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div></div>
+  <div class="box">
+    <div class="label-field-pair">
+      <label for="student_course"><%= t('select_a_course') %>:
+        <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
+      </label>
+      <div class="text-input-bg">
+        <%= select :courses, :name,
+          Course.active.map {|b| [b.course_name, b.id]},
+          {:prompt => "#{t('select_a_course')}"},
+          {:onChange => "#{remote_function(:url => {:action => "update_batch"},
+          :with => "'course_name='+ value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"
+          )}"} %>
+      </div></div>
 
-<div id="update_batch"></div>
-<div class="extender"></div>
- </div></div>
+    <div id="update_batch"></div>
+    <div class="extender"></div>
+  </div></div>
