--- a/app/views/additional_exam_groups/edit.html.erb
+++ b/app/views/additional_exam_groups/edit.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('additional_exams_text') %></h1>
   <h3><%= t('edit_additional_exam_groups') %></h3>
   <div id="app-back-button">
@@ -34,12 +34,12 @@
 
   <div class="box">
     <div class="bread_crumb">
-         <%= "#{t('course_text')}"%> &raquo;
-        <%=  @course.full_name%> &raquo;
-        <%= "#{t('batch')} #{@batch.name}" %> &raquo;
-        <%= link_to "#{t('additional_exams_text')}", batch_additional_exam_groups_path(@batch) %> &raquo;
-       <%= t('edit_additional_exam') %>
-        </div>
+      <%= "#{t('course_text')}"%> &raquo;
+      <%=  @course.full_name%> &raquo;
+      <%= "#{t('batch')} #{@batch.name}" %> &raquo;
+      <%= link_to "#{t('additional_exams_text')}", batch_additional_exam_groups_path(@batch) %> &raquo;
+      <%= t('edit_additional_exam') %>
+    </div>
 
 
     <% form_for [@batch, @additional_exam_group] do |f| %>
