--- a/app/views/additional_exam_groups/show.html.erb
+++ b/app/views/additional_exam_groups/show.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('additional_exams_text') %></h1>
   <h3><%= t('show_additional_exam_group') %></h3>
   <div id="app-back-button">
@@ -56,9 +56,9 @@
 
     <div class="update_msg">
       <% if permitted_to? :edit, :additional_exams %>
-      <h4><%= in_place_editor_field :additional_exam_group, :name %></h4>
+        <h4><%= in_place_editor_field :additional_exam_group, :name %></h4>
       <% else %>
-      <h4><span><%= @additional_exam_group.name %></span></h4>
+        <h4><span><%= @additional_exam_group.name %></span></h4>
       <% end %>
       <h4><span id="publish-notice-<%=@additional_exam_group.id%>"><%= image_tag("loader.gif",:align => "absmiddle",
             :border => 0,
@@ -73,7 +73,7 @@
           <td><%= t('max_mark') %></td>
           <td><%= t('min_mark') %></td>
           <% if permitted_to? :edit, :additional_exams %>
-          <td><%= t('manage') %></td>
+            <td><%= t('manage') %></td>
           <% end %>
         </tr>
         <% @additional_exam_group.additional_exams.each do |additional_exam| %>
@@ -81,16 +81,16 @@
             <% @additional_exam = additional_exam %>
             <td class="col-2"><%= link_to additional_exam.subject.name, [@additional_exam_group, additional_exam] %></td>
             <% if permitted_to? :edit, :additional_exams %>
-            <td class="col-1"><%= in_place_editor_field :additional_exam, :maximum_marks,{},{:cols=>1} %></td>
-            <td class="col-1"><%= in_place_editor_field :additional_exam, :minimum_marks,{},{:cols=>1} %></td>
-            <td class="col-1">
-              <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, additional_exam) %></small>
-              <% if @additional_exam.removable? %>
-              <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, additional_exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
-              <% else %>
-                <small><s><%= t('delete_text') %></s></small>
-              <% end %>
-            </td>
+              <td class="col-1"><%= in_place_editor_field :additional_exam, :maximum_marks,{},{:cols=>1} %></td>
+              <td class="col-1"><%= in_place_editor_field :additional_exam, :minimum_marks,{},{:cols=>1} %></td>
+              <td class="col-1">
+                <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, additional_exam) %></small>
+                <% if @additional_exam.removable? %>
+                  <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, additional_exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
+                <% else %>
+                  <small><s><%= t('delete_text') %></s></small>
+                <% end %>
+              </td>
             <% else %>
               <td class="col-1"><span><%= additional_exam.maximum_marks %></span></td>
               <td class="col-1"><span><%= additional_exam.minimum_marks %></span></td>
@@ -103,7 +103,7 @@
         <tr class="tr-head">
           <td><%= t('subject') %></td>
           <% if permitted_to? :edit, :additional_exams %>
-          <td><%= t('manage') %></td>
+            <td><%= t('manage') %></td>
           <% end %>
         </tr>
         <% @additional_exam_group.additional_exams.each do |exam| %>
@@ -111,14 +111,14 @@
             <% @exam = exam %>
             <td class="col-3"><%= link_to exam.subject.name, [@additional_exam_group, exam] %></td>
             <% if permitted_to? :edit, :additional_exams %>
-            <td class="col-1">
-              <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, exam) %></small>
-              <% if @exam.removable? %>
-              <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
-              <% else %>
-                <small><s><%= t('delete_text') %></s></small>
-              <% end %>
-            </td>
+              <td class="col-1">
+                <small><%= link_to "#{t('edit_text')}", edit_additional_exam_group_additional_exam_path(@additional_exam_group, exam) %></small>
+                <% if @exam.removable? %>
+                  <small><%= link_to "#{t('delete_text')}", [@additional_exam_group, exam], :method => 'delete', :confirm => "#{t('delete_confirm_msg')}" %></small>
+                <% else %>
+                  <small><s><%= t('delete_text') %></s></small>
+                <% end %>
+              </td>
             <% end %>
           </tr>
         <% end %>
