--- a/app/views/archived_student/academic_report.html.erb
+++ b/app/views/archived_student/academic_report.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('academic_report') %></h3>
   <div id="app-back-button">
@@ -54,10 +54,10 @@
               <%  end %></td>
           <% elsif exam_group.exam_type == "Marks" %>
             <td class="col-3"> <% unless @exam.nil? %>
-               <% unless exam_score.nil? %>
-          <%= exam_score.marks %> | <%= @exam.maximum_marks  %>
-        <% end %>
-        <% end %></td>
+                <% unless exam_score.nil? %>
+                  <%= exam_score.marks %> | <%= @exam.maximum_marks  %>
+                <% end %>
+              <% end %></td>
           <% else %>
             <td class="col-3"><%= exam_score.grading_level.name unless exam_score.nil? %></td>
             <% @g = 0 %>
