--- a/app/views/archived_student/delete.erb
+++ b/app/views/archived_student/delete.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/student_details/student_details_logo.jpg" />
+  <%= image_tag("/images/student_details/student_details_logo.jpg") %>
   <h1><%= t('students') %></h1>
   <h3><%= t('remove_student') %></h3>
   <div id="app-back-button">
-      <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
