--- a/app/views/archived_student/previous_years_marks_overview.html.erb
+++ b/app/views/archived_student/previous_years_marks_overview.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/student_details/student_details_logo.jpg" />
+  <%= image_tag("/images/student_details/student_details_logo.jpg") %>
   <h1><%= t('student_text') %></h1>
   <h3><%= t('previous_marks_overview') %></h3>
   <div id="app-back-button">
@@ -33,11 +33,11 @@
     <% @all_batches.each do |b| %>
       <%  @type = params[:type] %>
       <%   if @type == 'grouped' %>
-       <%   @grouped_exams = GroupedExam.find_all_by_batch_id(b.id) %>
-       <%   @exam_groups = [] %>
-       <%   @grouped_exams.each do |x| %>
-       <%   @exam_groups.push ExamGroup.find(x.exam_group_id) %>
-       <%   end %>
+        <%   @grouped_exams = GroupedExam.find_all_by_batch_id(b.id) %>
+        <%   @exam_groups = [] %>
+        <%   @grouped_exams.each do |x| %>
+          <%   @exam_groups.push ExamGroup.find(x.exam_group_id) %>
+        <%   end %>
       <% else %>
         <%   @exam_groups = ExamGroup.find_all_by_batch_id(b.id) %>
       <%  end %>
