--- a/app/views/archived_student/student_report.html.erb
+++ b/app/views/archived_student/student_report.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/attendence/attendence.png" />
+  <%= image_tag("/images/attendence/attendence.png") %>
   <h1><%= t('academics') %></h1>
   <h3><%= t('student_report') %></h3>
   <div id="app-back-button">
@@ -101,7 +101,7 @@
               </td>
               <td class="col-2">
                 <%= detail_report.reason %></td>
-            <% end %>
+              <% end %>
           </tr>
         </table>
       <% end %>
