--- a/app/views/attendance_reports/filter.html.erb
+++ b/app/views/attendance_reports/filter.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/attendence/attendence.png" />
+  <%= image_tag("/images/attendence/attendence.png") %>
   <h1><%= t('attendance_report') %></h1>
   <h3><%= t('filtered_report') %></h3>
   <div id="app-back-button">
