--- a/app/views/attendance_reports/index.html.erb
+++ b/app/views/attendance_reports/index.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/attendence/attendence.png" />
+  <%= image_tag("/images/attendence/attendence.png") %>
   <h1><%= t('attendance_report') %></h1>
   <h3><%= t('report') %></h3>
   <div id="app-back-button">
@@ -32,7 +32,7 @@
 </div>
 <div id="page-yield">
   <div class="label-field-pair">
-          <label> <%= t('select_a_batch') %>: </label>
+    <label> <%= t('select_a_batch') %>: </label>
     <div class="text-input-bg">
       <% if @config.config_value == 'Daily' %>
         <%= select :batch, :id,
@@ -54,11 +54,11 @@
           :success => "Element.hide('loader')"  )}"} %>
       <% end %>
 
-<%= image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" ) %><div class="extender"></div>
+      <%= image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" ) %><div class="extender"></div>
     </div>
   </div>
 
- 
+
   <div id="subject"></div>
   <div id="mode"></div>
   <div id="month"></div>
