--- a/app/views/attendance_reports/student_details.erb
+++ b/app/views/attendance_reports/student_details.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/attendence/attendence.png" />
+  <%= image_tag("/images/attendence/attendence.png") %>
   <h1><%= t('attendance_report') %></h1>
   <h3><%= t('student_report') %></h3>
   <div id="app-back-button">
@@ -51,16 +51,16 @@
           <% if r.forenoon and r.afternoon %>
             <%= "#{t('full_day')}" %>
           <% elsif r.afternoon %>
-           <%= "#{t('afternoon')}" %>
+            <%= "#{t('afternoon')}" %>
           <% elsif r.forenoon %>
-           <%= "#{t('forenoon')}" %>
+            <%= "#{t('forenoon')}" %>
           <% else %>
             <%= "#{t('absent')}" %>
           <% end %>
         </td>
         <td class="col-2">
           <%= r.reason %></td>
-    <% end %>
+        <% end %>
     </tr>
   </table>
 </div>
