--- a/app/views/batch_transfers/show.html.erb
+++ b/app/views/batch_transfers/show.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
  <div id="content-header">
-    <img src="/images/show_settings.png" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('batch_transfer') %></h1>
   <h3><%= t('transfer') %></h3>
   <div id="app-back-button">
