--- a/app/views/batches/assign_tutor.erb
+++ b/app/views/batches/assign_tutor.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/show_settings.png" alt="" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('batch') %></h1>
   <h3><%= t('assign_tutor') %></h3>
   <div id="app-back-button">
