--- a/app/views/batches/edit.html.erb
+++ b/app/views/batches/edit.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('courses_text') %></h1>
   <h3><%= t('edit_batch') %></h3>
   <div id="app-back-button">
@@ -49,7 +49,7 @@
         <div class="input-container"><%= f.text_field :name %></div>
       </div>
 
-          <div class="label-field-pair">
+      <div class="label-field-pair">
         <div class="label-container"><%= t('start_date') %></div>
         <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',I18n.localize(@batch.start_date, :format=>"%B %e, %Y") %></div>
       </div>
