--- a/app/views/class_timings/index.html.erb
+++ b/app/views/class_timings/index.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/show_timetable.png" />
+  <%= image_tag("/images/show_timetable.png") %>
   <h1><%= t('timetable_text') %></h1>
   <h3><%= t('set_class_timings') %></h3>
   <div id="app-back-button">
