--- a/app/views/configuration/index.erb
+++ b/app/views/configuration/index.erb
@@ -19,7 +19,7 @@
 
 
 <div id="content-header">
-  <img src="/images/show_settings.png" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('configuration_text') %></h1>
   <h3><%= t('configuration_text') %> <%= t('home') %></h3>
   <div id="app-back-button">
@@ -78,7 +78,7 @@
         </div>
       <% end %>
     <% end %>
-    </div>
-
-
   </div>
+
+
+</div>
