--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -19,7 +19,7 @@
 
 
 <div id="content-header">
-  <img src="/images/show_settings.png" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('configuration_text') %></h1>
   <h3><%= t('general_settings') %></h3>
   <div id="app-back-button">
