--- a/app/views/course/email.erb
+++ b/app/views/course/email.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/admission/admission_page_logo.jpg" />
+  <%= image_tag("/images/admission/admission_page_logo.jpg") %>
   <h1><%= t('class') %> : <%= @course.name%></h1>
   <h3><%= t('send_email') %></h3>
   <div id="app-back-button">
-     <%= link_to image_tag("/images/buttons/back.png", :border => 0), :back %>
+    <%= link_to image_tag("/images/buttons/back.png", :border => 0), :back %>
   </div>
 </div>
 
