--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('courses_text') %></h1>
   <h3><%= t('edit_text') %></h3>
   <div id="app-back-button">
@@ -34,9 +34,9 @@
 
   <div class="box">
     <div class="bread_crumb">
-        <%= link_to "#{t('courses_text')}", courses_path %> &raquo;
-       <%= t('edit_text') %>
-        </div>
+      <%= link_to "#{t('courses_text')}", courses_path %> &raquo;
+      <%= t('edit_text') %>
+    </div>
 
 
     <% form_for setup_course(@course) do |f| %>
