--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-    <img src="/images/show_settings.png" alt="Courses" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('courses_text') %></h1>
   <h3><%= t('home') %></h3>
   <div id="app-back-button">
