--- a/app/views/courses/manage_batches.html.erb
+++ b/app/views/courses/manage_batches.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/show_settings.png" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('course_text') %></h1>
   <h3><%= "#{t('manage_batch')}" %></h3>
   <div id="app-back-button">
-  <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
@@ -35,25 +35,25 @@
   </ul>
 </div>
 <div id="page-yield">
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-<div class="box">
-<div class="label-field-pair">
-   <label for="student_course"><%= "#{t('select_a_course')}" %>:
-<%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-  <%= select :course, :name,
-        Course.active.map {|b| [b.course_name + " " + b.section_name, b.id]},
-        {:prompt => "#{t('select_a_course')}"},
-        {:onChange => "#{remote_function(:url => {:action => "update_batch"},
-        :with => "'course_name='+ value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div></div>
+  <div class="box">
+    <div class="label-field-pair">
+      <label for="student_course"><%= "#{t('select_a_course')}" %>:
+        <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
+      </label>
+      <div class="text-input-bg">
+        <%= select :course, :name,
+          Course.active.map {|b| [b.course_name + " " + b.section_name, b.id]},
+          {:prompt => "#{t('select_a_course')}"},
+          {:onChange => "#{remote_function(:url => {:action => "update_batch"},
+          :with => "'course_name='+ value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"
+          )}"} %>
+      </div></div>
 
-<div id="update_batch" ></div>
-<div class="extender"></div>
- </div></div>
+    <div id="update_batch" ></div>
+    <div class="extender"></div>
+  </div></div>
