--- a/app/views/courses/manage_course.html.erb
+++ b/app/views/courses/manage_course.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-    <img src="/images/show_settings.png" alt="Course" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('courses_text') %></h1>
   <h3><%= "#{t('manage_course')}" %></h3>
   <div id="app-back-button">
@@ -36,28 +36,28 @@
 
 <div id="page-yield">
 
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
 
-    <% unless flash[:warn_notice].nil? %>
+  <% unless flash[:warn_notice].nil? %>
     <div id="errorExplanation" class="errorExplanation"><%= flash[:warn_notice] %> </div>
   <% end %>
 
- <div class="box">
-<h4 align="center"><%= t('course_text') %></h4>
+  <div class="box">
+    <h4 align="center"><%= t('course_text') %></h4>
 
-<ul id="category-list">
+    <ul id="category-list">
 
-    <% @courses.each do |course| %>
-      <li class="list<%=cycle('odd', 'even')%>">
-        <div class="category-name"><%= link_to course.full_name, course %></div>
-        <div class="category-edit"><%= link_to "#{t('edit_text')}", edit_course_path(course) if permitted_to? :edit, :courses %></div><div class="category-delete">   <%= link_to(t('delete_text'), course_path(course), :method => 'delete', :confirm => "#{t('delete_confirm_msg')}") if permitted_to? :destroy, :courses %></div>
-      </li>
-     <% end %>
+      <% @courses.each do |course| %>
+        <li class="list<%=cycle('odd', 'even')%>">
+          <div class="category-name"><%= link_to course.full_name, course %></div>
+          <div class="category-edit"><%= link_to "#{t('edit_text')}", edit_course_path(course) if permitted_to? :edit, :courses %></div><div class="category-delete">   <%= link_to(t('delete_text'), course_path(course), :method => 'delete', :confirm => "#{t('delete_confirm_msg')}") if permitted_to? :destroy, :courses %></div>
+        </li>
+      <% end %>
 
-</ul>
-  <div class="extender"></div>
+    </ul>
+    <div class="extender"></div>
   </div>
 </div>
