--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-    <img src="/images/show_settings.png" />
+  <%= image_tag("/images/show_settings.png") %>
   <h1><%= t('courses_text') %></h1>
   <h3><%= t('show') %></h3>
   <div id="app-back-button">
@@ -28,9 +28,9 @@
 <div id="inner-tab-menu">
   <ul>
     <li><%= link_to "#{t('new_text')}", new_course_batch_path(@course) %> </li>
-        <% if permitted_to? :edit, :course %>
-    <li><%= link_to "#{t('edit_text')}", edit_course_path(@course) if permitted_to? :edit, :course %></li>
-        <%  end %>
+    <% if permitted_to? :edit, :course %>
+      <li><%= link_to "#{t('edit_text')}", edit_course_path(@course) if permitted_to? :edit, :course %></li>
+    <%  end %>
     <% if permitted_to? :destroy, :course %>
       <li><%= link_to("#{t('delete_text')}", course_path(@course), :method => 'delete', :confirm => "#{t('delete_confirm_msg')}") %></li>
     <%  end %>
@@ -41,10 +41,10 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
   <div class="box">
-        <div class="bread_crumb">
-        <%= link_to "#{t('courses_text')}", courses_path %> &raquo;
-        <%= @course.full_name %>
-        </div>
+    <div class="bread_crumb">
+      <%= link_to "#{t('courses_text')}", courses_path %> &raquo;
+      <%= @course.full_name %>
+    </div>
 
 
     <ul id="category-list">
