--- a/app/views/elective_groups/show.html.erb
+++ b/app/views/elective_groups/show.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('batches_text') %></h1>
   <h3><%= "#{t('show_elective')}" %></h3>
   <div id="app-back-button">
@@ -32,9 +32,9 @@
 </div>
 <div id="page-yield">
   <div id="flash-box">
-  <% unless flash[:notice].nil? %>
-    <p class="flash-msg"> <%= flash[:notice] %> </p>
-  <% end %>
+    <% unless flash[:notice].nil? %>
+      <p class="flash-msg"> <%= flash[:notice] %> </p>
+    <% end %>
   </div>
   <div class="bread_crumb">
     <%= link_to t('course_text'), courses_path %> &raquo;
