--- a/app/views/employee/add_additional_details.erb
+++ b/app/views/employee/add_additional_details.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_settings') %></h1>
   <h3><%= t('add_additional_details') %></h3>
   <div id="app-back-button">
@@ -32,36 +32,36 @@
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
-    <%- form_for :additional_field do |c| -%>
+  <%- form_for :additional_field do |c| -%>
 
-      <%= error_messages_for 'additional_field' %>
-      <div id="form-content">
-        <div class="label-field-pair">
-          <label for="category_name"><%= t('name') %></label>
-          <div class="text-input-bg"> <%= c.text_field :name %> </div>
-        </div>
+    <%= error_messages_for 'additional_field' %>
+    <div id="form-content">
+      <div class="label-field-pair">
+        <label for="category_name"><%= t('name') %></label>
+        <div class="text-input-bg"> <%= c.text_field :name %> </div>
+      </div>
 
-        <div class="label-checkbox-pair">
-          <label class="status" for="status"><%= t('status') %></label>
-          <div id="radio-buttons">
-            <%= c.radio_button  "status", "true", :checked => "checked" %>
-            <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
+      <div class="label-checkbox-pair">
+        <label class="status" for="status"><%= t('status') %></label>
+        <div id="radio-buttons">
+          <%= c.radio_button  "status", "true", :checked => "checked" %>
+          <label class="label_for_status" for="add_grade_status_true"><%= t('active') %></label>
 
-            <%= c.radio_button  "status", "false" %>
-            <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
-          </div>
-        </div>
-
-        <div id="submit-button">
-          <%=submit_tag("► #{t('create_text')}") %>
+          <%= c.radio_button  "status", "false" %>
+          <label class="label_for_status" for="add_grade_status_false"><%= t('inactive') %></label>
         </div>
       </div>
 
-
-    <%- end -%>
-
-    <div id="category-list">
-      <%= render :partial => "additional_fields" %>
+      <div id="submit-button">
+        <%=submit_tag("► #{t('create_text')}") %>
+      </div>
     </div>
+
+
+  <%- end -%>
+
+  <div id="category-list">
+    <%= render :partial => "additional_fields" %>
+  </div>
 
 </div>
