--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -19,7 +19,7 @@
 
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_admission') %></h1>
   <h3><%= t('step_1') %></h3>
   <div id="app-back-button">
