--- a/app/views/employee/admission4.erb
+++ b/app/views/employee/admission4.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('select_reporting_manager') %></h1>
   <h3><%= t('step_5') %></h3>
   <div id="app-back-button">
