--- a/app/views/employee/create_monthly_payslip.erb
+++ b/app/views/employee/create_monthly_payslip.erb
@@ -19,7 +19,7 @@
 
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('monthly_payslip') %></h1>
   <h3><%= t('create_text') %></h3>
   <div id="app-back-button">
