--- a/app/views/employee/department_payslip.html.erb
+++ b/app/views/employee/department_payslip.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_text') %></h1>
   <h3><%= t('department_wise_payslip') %></h3>
   <div id="app-back-button">
