--- a/app/views/employee/edit1.erb
+++ b/app/views/employee/edit1.erb
@@ -29,7 +29,7 @@
 </script>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('edit_employee_information') %></h1>
   <h3><%= t('general') %></h3>
   <div id="app-back-button">
