--- a/app/views/employee/edit_department.erb
+++ b/app/views/employee/edit_department.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_settings') %></h1>
   <h3><%= "#{t('edit_department')}" %></h3>
   <div id="app-back-button">
