--- a/app/views/employee/employee_attendance.html.erb
+++ b/app/views/employee/employee_attendance.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/attendence/attendence.png" alt="" />
+  <%= image_tag("/images/attendence/attendence.png") %>
   <h1><%= t('manage_attendance') %></h1>
   <h3><%= t('leave_attendance') %></h3>
   <div id="app-back-button">
-   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
