--- a/app/views/employee/employee_management.html.erb
+++ b/app/views/employee/employee_management.html.erb
@@ -18,25 +18,25 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_management_text') %></h1>
   <h3><%= t('manage_all_employee') %></h3>
   <div id="app-back-button">
-     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
 <div id="page-yield">
   <div id="box">
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('employee_admission')}", :controller=>"employee", :action=>"admission1" %></div>
-    <div class="link-descr"><%= t('employee_admission_form') %></div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('employee_admission')}", :controller=>"employee", :action=>"admission1" %></div>
+      <div class="link-descr"><%= t('employee_admission_form') %></div>
+    </div>
 
-  <div class="link-box">
-    <div class="link-heading"><%= link_to "#{t('employee_subject_association')}", :controller=>"employee", :action=>"subject_assignment"%></div>
-    <div class="link-descr"><%= t('assign_an_employee') %></div>
-  </div>
+    <div class="link-box">
+      <div class="link-heading"><%= link_to "#{t('employee_subject_association')}", :controller=>"employee", :action=>"subject_assignment"%></div>
+      <div class="link-descr"><%= t('assign_an_employee') %></div>
+    </div>
   </div>
 
 </div>
