--- a/app/views/employee/leave_management_all.erb
+++ b/app/views/employee/leave_management_all.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/index/page_logo.jpg" alt="" />
+  <%= image_tag("/images/examination/index/page_logo.jpg") %>
   <h1><%= t('leave_management') %></h1>
   <h3><%= t('all_employee') %></h3>
   <div id="app-back-button">
-   <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 
@@ -30,10 +30,10 @@
 <div id="page-yield">
 
 
-<%= select :leave_management_all, :department_id, @departments.map { |s| [s.name, s.id] },
-          {:prompt => "#{t('select_department')}"},
-          {:onChange => "#{remote_function(:url => {:action => "update_employees_select"},
-                                           :with => "'department_id='+value")}"} %>
+  <%= select :leave_management_all, :department_id, @departments.map { |s| [s.name, s.id] },
+    {:prompt => "#{t('select_department')}"},
+    {:onChange => "#{remote_function(:url => {:action => "update_employees_select"},
+    :with => "'department_id='+value")}"} %>
 
-<div id="employees_select"> <%= render :partial => 'employee_select' %></div>
+  <div id="employees_select"> <%= render :partial => 'employee_select' %></div>
 </div>
