--- a/app/views/employee/leave_management_span.erb
+++ b/app/views/employee/leave_management_span.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('span_leave_management') %></h1>
   <h3><%= t('my_span') %></h3>
   <div id="app-back-button">
