--- a/app/views/employee/profile.erb
+++ b/app/views/employee/profile.erb
@@ -21,7 +21,7 @@
 <% profile_employee_no = @employee.employee_number %>
 
 <div id="content-header">
-  <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('employee_profile') %></h1>
   <h3><%= t('details') %></h3>
   <div id="app-back-button">
