--- a/app/views/employee/rejected_payslip.html.erb
+++ b/app/views/employee/rejected_payslip.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('rejected_payslip') %></h1>
   <h3><%= t('department_wise_payslip') %></h3>
   <div id="app-back-button">
@@ -29,13 +29,13 @@
 
 <div id="page-yield">
 
-    <div class="drop-down-box">
-      <label for="category_prefix"><%= t('select_a_department') %></label>
-      <div class="text-input-bg"> <%= select :individual_payslip, :department_id, @departments.map { |s| [s.name, s.id] },
-          {:prompt => "#{ t('select_a_department')}"},
-          {:onChange => "#{remote_function(:url => {:action => "update_rejected_employee_list"},
-                                           :with => "'department_id='+value")}"} %> </div>
-    </div>
-    <div class="extender"></div>
-    <div id="employees_select_list"></div>
+  <div class="drop-down-box">
+    <label for="category_prefix"><%= t('select_a_department') %></label>
+    <div class="text-input-bg"> <%= select :individual_payslip, :department_id, @departments.map { |s| [s.name, s.id] },
+        {:prompt => "#{ t('select_a_department')}"},
+        {:onChange => "#{remote_function(:url => {:action => "update_rejected_employee_list"},
+        :with => "'department_id='+value")}"} %> </div>
+  </div>
+  <div class="extender"></div>
+  <div id="employees_select_list"></div>
 </div>
