--- a/app/views/employee/select_department_employee.erb
+++ b/app/views/employee/select_department_employee.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-   <img src="/images/HR/show_hr.png" alt="" />
+  <%= image_tag("/images/HR/show_hr.png") %>
   <h1><%= t('payslip_generation') %></h1>
   <h3><%= t('individual_employee') %></h3>
   <div id="app-back-button">
