--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -65,6 +65,10 @@
       <div class="link-heading"><%= link_to "#{t('grouped_exam_reports')}" ,:action=>'grouped_exam_report' %></div>
       <div class="link-descr"><%= t('group_up_exams_for_specific_reports') %></div>
     </div>
+     <div class="link-box">
+      <div class="link-heading"><%= link_to 'Archived Student Reports' , :controller=> "exam_reports",:action=>'archived_exam_wise_report' %></div>
+      <div class="link-descr">Generates reports for Archived Students Exam wise</div>
+    </div>
 
     <!--online exam-->
 
