Added caching for main menu and auto suggest.
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1522 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div id="outer-main-menu">
-          <%= render :partial=>"layouts/main_menu" %>
+                    <%= main_menu %>
         </div>
         <div id="outer-autosuggest-menu">
           <%= render :partial => "layouts/autosuggest_menu" %>
