Removed additional brackets for messages
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1524 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
             <%= t('logged_as') %>
             <%= link_to @current_user.first_name, :controller => 'user', :action => 'profile',
               :id => @current_user.username %> &nbsp;|&nbsp;
-            <%= link_to t('messages'),:controller => "reminder", :action => "index" %>(<%= render :partial => 'layouts/reminder_count' %>)&nbsp;|&nbsp;
+            <%= link_to t('messages'),:controller => "reminder", :action => "index" %><%= render :partial => 'layouts/reminder_count' %>&nbsp;|&nbsp;
             <%= link_to t('log_out'), :controller => 'user', :action => 'logout' %>  &nbsp;&nbsp;
           </div>
         </div>
