flash 27 to flash 26 in employee controller
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1701 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,7 @@
     <div id="footer">
       <div id="footer_logo">
         <div id="powered_by">
-          <%= t('powered_by') %> <a href="http://www.foradian.com/" target="_blank">Foradian</a>
+          <%= t('powered_by') %> <a href="http://www.foradian.com/" target="_blank">Fedena</a>
         </div>
         <a href="http://www.projectfedena.org/" target="_blank" class="footer-logo"></a>
       </div>
