--- a/app/views/exam_groups/show.html.erb
+++ b/app/views/exam_groups/show.html.erb
@@ -61,7 +61,7 @@
         <h4><span><%= @exam_group.name %></span></h4>
       <% end %>
 
-      <h4><span id="publish-notice-<%=@exam_group.id%>"><%= image_tag("loader.gif",:align => "absmiddle",
+      <h4><span class="flash_color" id="publish-notice-<%=@exam_group.id%>"><%= image_tag("loader.gif",:align => "absmiddle",
             :border => 0,
             :id => "loader",
             :style =>"display: none;" ) %></span></h4></div>
