--- a/app/views/finance/fee_collection.html.erb
+++ b/app/views/finance/fee_collection.html.erb
@@ -41,6 +41,6 @@
       <div class="link-descr"><%= t('displays_collection_dates') %></div>
     </div>
 
-    <div id="modal-box" style="display:none;"></div>
+    <div id="modal-box" style="display:none;overflow:hidden; "></div>
   </div>
 </div>
