--- a/app/views/batch_transfers/subject_transfer.html.erb
+++ b/app/views/batch_transfers/subject_transfer.html.erb
@@ -19,7 +19,7 @@
 
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
-  <h1><%= t('students') %></h1>
+  <h1><%= t('subjects_text') %></h1>
   <h3><%= t('assign_subject') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
