--- a/app/views/student/advanced_search.erb
+++ b/app/views/student/advanced_search.erb
@@ -102,7 +102,7 @@
       <div class="label-field-pair">
         <label for="student_grade"><%= t('admission_date') %></label>
         <div class="text-input-bg">
-          <%= select :advv_search,:doa_option,[["#{t('equal_to')}","equal_to"],["#{t('less_than')}","less_than"],["#{t('greater_than')}","greater_than"]],{:prompt=>"#{t('option')}"},
+          <%= select :advv_search,:doa_option,[["#{t('equal_to')}","Equal to"],["#{t('less_than')}","Less than"],["#{t('greater_than')}","Greater than"]],{:prompt=>"#{t('option')}"},
             {:onChange => "#{remote_function(:url => {:action => "list_doa_year"},
             :with=>"'doa_option='+value",
             :before => "Element.show('loader')",
@@ -123,7 +123,7 @@
       <div class="label-field-pair">
         <label for="student_birth_date"><%= t('birth_date') %></label>
         <div class="text-input-bg">
-          <%= select :advv_search,:dob_option,[["#{t('equal_to')}","equal_to"],["#{t('less_than')}","less_than"],["#{t('greater_than')}","greater_than"]],{:prompt=>"#{t('option')}"},
+          <%= select :advv_search,:dob_option,[["#{t('equal_to')}","Equal to"],["#{t('less_than')}","Less than"],["#{t('greater_than')}","Greater than"]],{:prompt=>"#{t('option')}"},
             {:onChange => "#{remote_function(:url => {:action => "list_dob_year"},
             :with=>"'dob_option='+value",
             :before => "Element.show('loader')",
