--- a/public/stylesheets/rtl/courses/manage_course.css
+++ b/public/stylesheets/rtl/courses/manage_course.css
@@ -80,16 +80,16 @@
 }
 
 #inner-tab-menu ul li {
-    background-color:#9D0E00;
-    color:#FFFFFF;
-    float:right;
-    font-size:0.9em;
-    height:1.5em;
-    list-style-type:none;
-    margin:0 10px 0 0;
-    padding:3px 3px;
-    text-align:center;
-    width:159px;
+    background-color: #9D0E00;
+    color: #FFFFFF;
+    float: right;
+    font-size: 0.9em;
+    height: 1.5em;
+    list-style-type: none;
+    margin: 0 0 0 10px;
+    padding: 0;
+    text-align: center;
+    width: 100px;
 }
 
 p{
