--- a/public/stylesheets/rtl/class_timings/index.css
+++ b/public/stylesheets/rtl/class_timings/index.css
@@ -167,3 +167,6 @@ table#class-timings-list td.col-6{
 .linker{
     margin-bottom: 5px;
 }
+.time-select-field select {
+    visibility: visible !important;
+}
