--- a/app/views/timetable/_table.html.erb
+++ b/app/views/timetable/_table.html.erb
@@ -61,21 +61,29 @@
               <div class="bottom">
                 <div class="subject">
                   <% unless t.subject_id.nil? %>
-                  <% unless t.subject.elective_group_id.nil?   %>
-                    <%= shorten_string(t.subject.elective_group.name.to_s,10) %>
-                  <% else %>
-                    <%= t.subject.code  %>
-                  <% end %>
+                    <% unless t.subject.elective_group_id.nil?   %>
+                      <%= shorten_string(t.subject.elective_group.name.to_s,10) %>
+                    <% else %>
+                      <%= t.subject.code  %>
+                    <% end %>
                   <% end %>
                 </div>
                 <% if @config.include?('HR') %>
                   <% unless t.employee.nil? %>
-                    <div class="employee">
-                      <%= t.employee.first_name unless t.employee_id.nil? %>
-                    </div>
-                  <% end %>
-                <% end %>
-              </div>
+                  <div class="employee">
+                    <% unless t.nil? %>
+                      <% unless t.subject.nil? %>
+                        <% unless t.subject.elective_group_id.nil?   %>
+                          <%= t('elective') %>
+                        <% else %>
+                          <%= t.employee.first_name unless t.employee.nil? %>
+                        <% end %>
+                      <% end %>
+                    <% end %>
+                  </div>
+                        <% end %>
+                      <% end %>
+                  </div>
             </td>
           <% end %>
 
