--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <%= stylesheet_link_tag(*get_stylesheets) %>
     <%= stylesheet_link_tag @direction+'modalbox' %>
     <%= stylesheet_link_tag @direction+'popup.css' %>
-    <%= stylesheet_link_tag 'autosuggest-menu.css' %>
+    <%= stylesheet_link_tag @direction+'autosuggest-menu.css' %>
     
     <%= javascript_include_tag :defaults, :cache => 'cache/javascripts/all' %>
     <%= javascript_include_tag 'scripts/nicetitle', 'droplicious' %>
