bug fixes(style issues in finanace fee submissions,master category particulars)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1915 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/generated_report_pdf.erb
+++ b/app/views/exam/generated_report_pdf.erb
@@ -22,7 +22,7 @@
 <div id="page-yield">
 
   <div class="hor_line"></div>
-  <h2><%= "#{t('student_wise_report_for')} "+@exam_group.name+", #{t('batch')}:"+@batch.name %></h2>
+  <h2><%= "#{t('student_wise_report_for')} "+@exam_group.name+", #{t('batch')}:"+@batch.full_name %></h2>
   <div class="hor_line"></div>
 
   <% @students.each_with_index do |student,i| %>
