bug fixes(flash msg issue in subject controller,flash msg issue in fee discount,student_fee_reciept_pdf style issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1921 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/report_compare.html.erb
+++ b/app/views/finance/report_compare.html.erb
@@ -130,7 +130,7 @@
           <td></td>
           <td class="col-3" align="right"><%= @grand_total%></td>
         <% else %>
-          <td class="col-3" align="right"><%= @grand_total%></td>
+          <td class="col-3" align="right"><%= @grand_total*-1%></td>
           <td></td>
         <% end %>
         <td class="col-3">  </td>
@@ -234,7 +234,7 @@
           <td></td>
           <td class="col-3" align="right"><%= @grand_total2%></td>
         <% else %>
-          <td class="col-3" align="right"><%= @grand_total2%></td>
+          <td class="col-3" align="right"><%= @grand_total2 * -1%></td>
           <td></td>
         <% end %>
         <td class="col-3">  </td>
