--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -56,7 +56,7 @@
         <% @batch_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,20) %></td>
+            <td class="col-2"><%= shorten_string(d.name,50) %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
@@ -64,7 +64,7 @@
         <% @student_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,20) %></td>
+            <td class="col-2"><%= shorten_string(d.name,50) %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
@@ -72,7 +72,7 @@
         <% @category_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+1 %></td>
-            <td class="col-2"><%= shorten_string(d.name,20) %></td>
+            <td class="col-2"><%= shorten_string(d.name,50) %></td>
             <td class="col-6"><%= d.discount%> %</td>
           </tr>
           <% i += 1 %>
@@ -136,7 +136,7 @@
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+= 1 %></td>
             <td class="col-2"><%= t('partial_payment_on') %> <%= p.transaction_date %></td>
-            <td class="col-6">-<%= p.amount.to_f %></td>
+            <td class="col-6"><%= p.amount.to_f %></td>
           </tr>
         <% end %>
         <% total_fees -= paid %>
