Header logo changes
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1989 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/_layouts/dashboard.css
+++ b/public/stylesheets/_layouts/dashboard.css
@@ -10,7 +10,7 @@ body {
 }
 #header_bg {
     height : 60px;
-    background : #b00 url(../../images/application/app_layout_header_bg.jpg) repeat;
+    background : #b00 url(../../images/application/app_layout_header_bg.png) repeat;
 }
 #header {
     width : 980px; height : 60px;
