fixes in finance for bugs after singularizing feeparticular model
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2390 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_fee_particulars_create_form.html.erb
+++ b/app/views/finance/_fee_particulars_create_form.html.erb
@@ -22,7 +22,7 @@
 
 <div id="grading-levels-form">
 
-  <% form_remote_for  @finance_fee_particulars,:url =>{:action => 'fees_particulars_create'}  do |f| %>
+  <% form_remote_for  @finance_fee_particular,:url =>{:action => 'fees_particulars_create'}  do |f| %>
 
     <div id="form-errors"></div>
 
